json_tests/tests/ui/not_found.stderr
error[E0425]: cannot find value `x` in this scope
 --> $DIR/not_found.rs:5:19
  |
5 |     json!({ "a" : x });
  |                   ^ not found in this scope

error: aborting due to previous error

